--- a/src/components/DashboardIvents/DashboardIvents.module.scss
+++ b/src/components/DashboardIvents/DashboardIvents.module.scss
@@ -1,6 +1,14 @@
 .ivents {
-    display: flex;
+    display: grid;
     gap: 20px;
+    grid-template-columns: repeat(2, 158px);
+
+    @include media(tablet) {
+        grid-template-columns: repeat(2, 220px);
+    }  
+    @include media(desktop) {
+        grid-template-columns: repeat(4, 240px);
+    }
 }
 
 .ivent{
@@ -16,7 +24,7 @@
     padding: 14px;
 
     @include media(tablet) {
-        width: 221px;
+        width: 220px;
         height: 108px;
     }
     @include media(desktop) {
