--- a/src/components/AuthForm/AuthForm.module.scss
+++ b/src/components/AuthForm/AuthForm.module.scss
@@ -45,15 +45,9 @@
     cursor: pointer;
 }
 
-.alternative > button {
+.guestButton {
     width: 200px;
     padding: 12px 18px;
     border-radius: 20px;
     border: 1px solid $light-gray;
-}
-
-.google {
-    background: $blue;
-    color: $white;
-    margin-bottom: 4px;
 }
