--- a/src/pages/Welcome/Welcome.module.scss
+++ b/src/pages/Welcome/Welcome.module.scss
@@ -1,10 +1,12 @@
 .container {
-    padding: 24px 20px;
-
+    padding: 20px 16px;
+    @include media(mobile){
+        padding: 24px 20px;
+    }
     @include media(tablet) {
         padding: 24px 32px;;
     }
-    @include media(tablet) {
+    @include media(desktop) {
         padding: 28px 100px;
     }
 }
@@ -16,18 +18,24 @@
 }
 
 .logo {
-    width: 44px;
-    height: 44px;
-    background-color: $green;
+    width: 36px;
+    height: 36px;
 
     @include media(tablet) {
         width: 40px;
         height: 40px;
     }
+    @include media(desktop) {
+        width: 44px;
+        height: 44px;
+    }
 }
 
 .title {
-    @include font(20, 24);
+    @include font(16, 20);
+    @include media(tablet) {
+        @include font(20, 24);
+    }
 }
 
 .container > main {
@@ -47,8 +55,10 @@
 }
 
 .welcomeTitle {
-    width: 310px;
-
+    width: 290px;
+    @include media (mobile) {
+        width: 310px;
+    }
     @include media (tablet) {
         width: 440px;
     }
@@ -62,8 +72,6 @@
 .image {
     width: 95px;
     height: 95px;
-    border-radius: 50%;
-    background-color: $green;
     margin-left: auto;
     position: relative;
     top: 35px;
@@ -84,8 +92,10 @@
 }
 
 .welcomeTitle > p {
-    @include font(28, 34);
-
+    @include font(26, 32);
+    @include media (mobile) {
+        @include font(28, 34);
+    }
     @include media (tablet) {
         @include font(40, 46);
     }
