--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,9 +1,12 @@
 .container {
-    padding: 20px;
+    padding: 20px 10px;
     display: flex;
     flex-direction: column;
     gap: 20px;
 
+    @include media(mobile) {
+        padding: 20px 20px;
+    }
     @include media(tablet) {
         padding: 20px 32px;
     }
